added functionality to eightball

--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,27 @@
   text-align: center;
 }
 
-.card {
+.button {
   padding: 2em;
 }
 
-.read-the-docs {
-  color: #888;
+.footer {
+  color: #888888;
+}
+
+.eightBall {
+  background-color: black;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  margin: 20px auto;
+}
+
+.msg-box {
+  /* padding-top: 45%; */
+  /* background-color: white;
+  color: black; */
+  /* border-radius: 50%; */
+  padding-top: 125px;
+  font-weight: bold;
 }
